0.1
	Initial release

0.2
	Cleaned up boards inner border